parser.output
   0  $accept : %entry% $end

   1  program : cdecls EOF

   2  cdecls : cdecl_list

   3  cdecl_list : cdecl
   4             | cdecl_list cdecl

   5  scope : PRIVATE
   6        | PUBLIC

   7  cdecl : scope CLASS ID LBRACE cbody RBRACE

   8  cbody :
   9        | cbody vdecl
  10        | cbody constructor
  11        | cbody fdecl

  12  vdecl : scope datatype ID SEMI
  13        | scope datatype ID ASSIGN expr SEMI

  14  constructor : ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  15  fdecl : scope datatype ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  16  primitive : JCHAR
  17            | JINT
  18            | JFLOAT
  19            | JBOOLEAN
  20            | JVOID
  21            | JTUPLE LPAREN datatype COMMA datatype RPAREN

  22  type_tag : primitive
  23           | CLASS ID

  24  array_type : type_tag LBRACKET brackets RBRACKET

  25  datatype : type_tag
  26           | array_type

  27  brackets :
  28           | brackets RBRACKET LBRACKET

  29  formal : datatype ID

  30  formals_opt :
  31              | formal_list

  32  formal_list : formal
  33              | formal_list COMMA formal

  34  actuals_opt :
  35              | actuals_list

  36  actuals_list : expr
  37               | actuals_list COMMA expr

  38  stmt_list :
  39            | stmt_list stmt

  40  stmt : expr SEMI
  41       | vdecl
  42       | datatype ID SEMI
  43       | datatype ID ASSIGN expr SEMI
  44       | RETURN SEMI
  45       | RETURN expr SEMI
  46       | LBRACE stmt_list RBRACE
  47       | IF LPAREN expr RPAREN stmt
  48       | IF LPAREN expr RPAREN stmt ELSE stmt
  49       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  50       | WHILE LPAREN expr RPAREN stmt

  51  expr : literals
  52       | expr PLUS expr
  53       | expr MINUS expr
  54       | expr TIMES expr
  55       | expr DIVIDE expr
  56       | expr EQ expr
  57       | expr NEQ expr
  58       | expr LT expr
  59       | expr LEQ expr
  60       | expr GT expr
  61       | expr GEQ expr
  62       | expr AND expr
  63       | expr OR expr
  64       | NOT expr
  65       | ID ASSIGN expr
  66       | LPAREN expr RPAREN
  67       | ID LPAREN actuals_opt RPAREN
  68       | NEW ID LPAREN actuals_opt RPAREN
  69       | expr DOT expr
  70       | LPAREN expr COMMA expr RPAREN
  71       | NEW type_tag brackets_args RBRACKET
  72       | expr brackets_args RBRACKET

  73  brackets_args : LBRACKET expr
  74                | brackets_args RBRACKET LBRACKET expr

  75  expr_opt :
  76           | expr

  77  literals : INT_LITERAL
  78           | FLOAT_LITERAL
  79           | TRUE
  80           | FALSE
  81           | STRING_LITERAL
  82           | CHAR_LITERAL
  83           | ID
  84           | NULL

  85  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (85)

	PUBLIC  shift 3
	PRIVATE  shift 4
	.  error

	program  goto 5
	cdecls  goto 6
	cdecl_list  goto 7
	cdecl  goto 8
	scope  goto 9


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	scope : PUBLIC .  (6)

	.  reduce 6


state 4
	scope : PRIVATE .  (5)

	.  reduce 5


state 5
	%entry% : '\001' program .  (85)

	.  reduce 85


state 6
	program : cdecls . EOF  (1)

	EOF  shift 10
	.  error


state 7
	cdecls : cdecl_list .  (2)
	cdecl_list : cdecl_list . cdecl  (4)

	PUBLIC  shift 3
	PRIVATE  shift 4
	EOF  reduce 2

	cdecl  goto 11
	scope  goto 9


state 8
	cdecl_list : cdecl .  (3)

	.  reduce 3


state 9
	cdecl : scope . CLASS ID LBRACE cbody RBRACE  (7)

	CLASS  shift 12
	.  error


state 10
	program : cdecls EOF .  (1)

	.  reduce 1


state 11
	cdecl_list : cdecl_list cdecl .  (4)

	.  reduce 4


state 12
	cdecl : scope CLASS . ID LBRACE cbody RBRACE  (7)

	ID  shift 13
	.  error


state 13
	cdecl : scope CLASS ID . LBRACE cbody RBRACE  (7)

	LBRACE  shift 14
	.  error


state 14
	cdecl : scope CLASS ID LBRACE . cbody RBRACE  (7)
	cbody : .  (8)

	.  reduce 8

	cbody  goto 15


state 15
	cdecl : scope CLASS ID LBRACE cbody . RBRACE  (7)
	cbody : cbody . vdecl  (9)
	cbody : cbody . constructor  (10)
	cbody : cbody . fdecl  (11)

	PUBLIC  shift 3
	PRIVATE  shift 4
	RBRACE  shift 16
	ID  shift 17
	.  error

	scope  goto 18
	vdecl  goto 19
	constructor  goto 20
	fdecl  goto 21


state 16
	cdecl : scope CLASS ID LBRACE cbody RBRACE .  (7)

	.  reduce 7


state 17
	constructor : ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (14)

	LPAREN  shift 22
	.  error


state 18
	vdecl : scope . datatype ID SEMI  (12)
	vdecl : scope . datatype ID ASSIGN expr SEMI  (13)
	fdecl : scope . datatype ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (15)

	CLASS  shift 23
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	JTUPLE  shift 29
	.  error

	datatype  goto 30
	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33


state 19
	cbody : cbody vdecl .  (9)

	.  reduce 9


state 20
	cbody : cbody constructor .  (10)

	.  reduce 10


state 21
	cbody : cbody fdecl .  (11)

	.  reduce 11


state 22
	constructor : ID LPAREN . formals_opt RPAREN LBRACE stmt_list RBRACE  (14)
	formals_opt : .  (30)

	CLASS  shift 23
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	JTUPLE  shift 29
	RPAREN  reduce 30

	datatype  goto 34
	formals_opt  goto 35
	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	formal  goto 36
	formal_list  goto 37


state 23
	type_tag : CLASS . ID  (23)

	ID  shift 38
	.  error


state 24
	primitive : JBOOLEAN .  (19)

	.  reduce 19


state 25
	primitive : JCHAR .  (16)

	.  reduce 16


state 26
	primitive : JINT .  (17)

	.  reduce 17


state 27
	primitive : JFLOAT .  (18)

	.  reduce 18


state 28
	primitive : JVOID .  (20)

	.  reduce 20


state 29
	primitive : JTUPLE . LPAREN datatype COMMA datatype RPAREN  (21)

	LPAREN  shift 39
	.  error


state 30
	vdecl : scope datatype . ID SEMI  (12)
	vdecl : scope datatype . ID ASSIGN expr SEMI  (13)
	fdecl : scope datatype . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (15)

	ID  shift 40
	.  error


state 31
	type_tag : primitive .  (22)

	.  reduce 22


state 32
	array_type : type_tag . LBRACKET brackets RBRACKET  (24)
	datatype : type_tag .  (25)

	LBRACKET  shift 41
	RPAREN  reduce 25
	COMMA  reduce 25
	ID  reduce 25


state 33
	datatype : array_type .  (26)

	.  reduce 26


state 34
	formal : datatype . ID  (29)

	ID  shift 42
	.  error


state 35
	constructor : ID LPAREN formals_opt . RPAREN LBRACE stmt_list RBRACE  (14)

	RPAREN  shift 43
	.  error


state 36
	formal_list : formal .  (32)

	.  reduce 32


state 37
	formals_opt : formal_list .  (31)
	formal_list : formal_list . COMMA formal  (33)

	COMMA  shift 44
	RPAREN  reduce 31


state 38
	type_tag : CLASS ID .  (23)

	.  reduce 23


state 39
	primitive : JTUPLE LPAREN . datatype COMMA datatype RPAREN  (21)

	CLASS  shift 23
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	JTUPLE  shift 29
	.  error

	datatype  goto 45
	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33


state 40
	vdecl : scope datatype ID . SEMI  (12)
	vdecl : scope datatype ID . ASSIGN expr SEMI  (13)
	fdecl : scope datatype ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (15)

	SEMI  shift 46
	LPAREN  shift 47
	ASSIGN  shift 48
	.  error


state 41
	array_type : type_tag LBRACKET . brackets RBRACKET  (24)
	brackets : .  (27)

	.  reduce 27

	brackets  goto 49


state 42
	formal : datatype ID .  (29)

	.  reduce 29


state 43
	constructor : ID LPAREN formals_opt RPAREN . LBRACE stmt_list RBRACE  (14)

	LBRACE  shift 50
	.  error


state 44
	formal_list : formal_list COMMA . formal  (33)

	CLASS  shift 23
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	JTUPLE  shift 29
	.  error

	datatype  goto 34
	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	formal  goto 51


state 45
	primitive : JTUPLE LPAREN datatype . COMMA datatype RPAREN  (21)

	COMMA  shift 52
	.  error


state 46
	vdecl : scope datatype ID SEMI .  (12)

	.  reduce 12


state 47
	fdecl : scope datatype ID LPAREN . formals_opt RPAREN LBRACE stmt_list RBRACE  (15)
	formals_opt : .  (30)

	CLASS  shift 23
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	JTUPLE  shift 29
	RPAREN  reduce 30

	datatype  goto 34
	formals_opt  goto 53
	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	formal  goto 36
	formal_list  goto 37


state 48
	vdecl : scope datatype ID ASSIGN . expr SEMI  (13)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 65
	literals  goto 66


state 49
	array_type : type_tag LBRACKET brackets . RBRACKET  (24)
	brackets : brackets . RBRACKET LBRACKET  (28)

	RBRACKET  shift 67
	.  error


state 50
	constructor : ID LPAREN formals_opt RPAREN LBRACE . stmt_list RBRACE  (14)
	stmt_list : .  (38)

	.  reduce 38

	stmt_list  goto 68


state 51
	formal_list : formal_list COMMA formal .  (33)

	.  reduce 33


state 52
	primitive : JTUPLE LPAREN datatype COMMA . datatype RPAREN  (21)

	CLASS  shift 23
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	JTUPLE  shift 29
	.  error

	datatype  goto 69
	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33


state 53
	fdecl : scope datatype ID LPAREN formals_opt . RPAREN LBRACE stmt_list RBRACE  (15)

	RPAREN  shift 70
	.  error


state 54
	literals : TRUE .  (79)

	.  reduce 79


state 55
	literals : FALSE .  (80)

	.  reduce 80


state 56
	literals : NULL .  (84)

	.  reduce 84


state 57
	expr : LPAREN . expr RPAREN  (66)
	expr : LPAREN . expr COMMA expr RPAREN  (70)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 71
	literals  goto 66


state 58
	expr : NOT . expr  (64)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 72
	literals  goto 66


state 59
	expr : NEW . ID LPAREN actuals_opt RPAREN  (68)
	expr : NEW . type_tag brackets_args RBRACKET  (71)

	CLASS  shift 23
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	JTUPLE  shift 29
	ID  shift 73
	.  error

	primitive  goto 31
	type_tag  goto 74


state 60
	literals : INT_LITERAL .  (77)

	.  reduce 77


state 61
	literals : FLOAT_LITERAL .  (78)

	.  reduce 78


state 62
	literals : STRING_LITERAL .  (81)

	.  reduce 81


state 63
	literals : CHAR_LITERAL .  (82)

	.  reduce 82


state 64
	expr : ID . ASSIGN expr  (65)
	expr : ID . LPAREN actuals_opt RPAREN  (67)
	literals : ID .  (83)

	LPAREN  shift 75
	ASSIGN  shift 76
	SEMI  reduce 83
	RPAREN  reduce 83
	LBRACKET  reduce 83
	RBRACKET  reduce 83
	COMMA  reduce 83
	DOT  reduce 83
	PLUS  reduce 83
	MINUS  reduce 83
	TIMES  reduce 83
	DIVIDE  reduce 83
	AND  reduce 83
	OR  reduce 83
	EQ  reduce 83
	NEQ  reduce 83
	LT  reduce 83
	LEQ  reduce 83
	GT  reduce 83
	GEQ  reduce 83


state 65
	vdecl : scope datatype ID ASSIGN expr . SEMI  (13)
	expr : expr . PLUS expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . TIMES expr  (54)
	expr : expr . DIVIDE expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . DOT expr  (69)
	expr : expr . brackets_args RBRACKET  (72)

	SEMI  shift 77
	LBRACKET  shift 78
	DOT  shift 79
	PLUS  shift 80
	MINUS  shift 81
	TIMES  shift 82
	DIVIDE  shift 83
	AND  shift 84
	OR  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	.  error

	brackets_args  goto 92


state 66
	expr : literals .  (51)

	.  reduce 51


state 67
	array_type : type_tag LBRACKET brackets RBRACKET .  (24)
	brackets : brackets RBRACKET . LBRACKET  (28)

	LBRACKET  shift 93
	RPAREN  reduce 24
	COMMA  reduce 24
	ID  reduce 24


state 68
	constructor : ID LPAREN formals_opt RPAREN LBRACE stmt_list . RBRACE  (14)
	stmt_list : stmt_list . stmt  (39)

	CLASS  shift 23
	PUBLIC  shift 3
	PRIVATE  shift 4
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	JTUPLE  shift 29
	LPAREN  shift 57
	LBRACE  shift 94
	RBRACE  shift 95
	NOT  shift 58
	RETURN  shift 96
	IF  shift 97
	FOR  shift 98
	WHILE  shift 99
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	scope  goto 100
	vdecl  goto 101
	datatype  goto 102
	expr  goto 103
	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	stmt  goto 104
	literals  goto 66


state 69
	primitive : JTUPLE LPAREN datatype COMMA datatype . RPAREN  (21)

	RPAREN  shift 105
	.  error


state 70
	fdecl : scope datatype ID LPAREN formals_opt RPAREN . LBRACE stmt_list RBRACE  (15)

	LBRACE  shift 106
	.  error


state 71
	expr : expr . PLUS expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . TIMES expr  (54)
	expr : expr . DIVIDE expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : LPAREN expr . RPAREN  (66)
	expr : expr . DOT expr  (69)
	expr : LPAREN expr . COMMA expr RPAREN  (70)
	expr : expr . brackets_args RBRACKET  (72)

	RPAREN  shift 107
	LBRACKET  shift 78
	COMMA  shift 108
	DOT  shift 79
	PLUS  shift 80
	MINUS  shift 81
	TIMES  shift 82
	DIVIDE  shift 83
	AND  shift 84
	OR  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	.  error

	brackets_args  goto 92


state 72
	expr : expr . PLUS expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . TIMES expr  (54)
	expr : expr . DIVIDE expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : NOT expr .  (64)
	expr : expr . DOT expr  (69)
	expr : expr . brackets_args RBRACKET  (72)

	LBRACKET  shift 78
	DOT  shift 79
	SEMI  reduce 64
	RPAREN  reduce 64
	RBRACKET  reduce 64
	COMMA  reduce 64
	PLUS  reduce 64
	MINUS  reduce 64
	TIMES  reduce 64
	DIVIDE  reduce 64
	AND  reduce 64
	OR  reduce 64
	EQ  reduce 64
	NEQ  reduce 64
	LT  reduce 64
	LEQ  reduce 64
	GT  reduce 64
	GEQ  reduce 64

	brackets_args  goto 92


state 73
	expr : NEW ID . LPAREN actuals_opt RPAREN  (68)

	LPAREN  shift 109
	.  error


state 74
	expr : NEW type_tag . brackets_args RBRACKET  (71)

	LBRACKET  shift 78
	.  error

	brackets_args  goto 110


state 75
	expr : ID LPAREN . actuals_opt RPAREN  (67)
	actuals_opt : .  (34)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	RPAREN  reduce 34

	expr  goto 111
	actuals_opt  goto 112
	actuals_list  goto 113
	literals  goto 66


state 76
	expr : ID ASSIGN . expr  (65)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 114
	literals  goto 66


state 77
	vdecl : scope datatype ID ASSIGN expr SEMI .  (13)

	.  reduce 13


state 78
	brackets_args : LBRACKET . expr  (73)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 115
	literals  goto 66


state 79
	expr : expr DOT . expr  (69)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 116
	literals  goto 66


state 80
	expr : expr PLUS . expr  (52)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 117
	literals  goto 66


state 81
	expr : expr MINUS . expr  (53)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 118
	literals  goto 66


state 82
	expr : expr TIMES . expr  (54)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 119
	literals  goto 66


state 83
	expr : expr DIVIDE . expr  (55)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 120
	literals  goto 66


state 84
	expr : expr AND . expr  (62)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 121
	literals  goto 66


state 85
	expr : expr OR . expr  (63)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 122
	literals  goto 66


state 86
	expr : expr EQ . expr  (56)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 123
	literals  goto 66


state 87
	expr : expr NEQ . expr  (57)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 124
	literals  goto 66


state 88
	expr : expr LT . expr  (58)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 125
	literals  goto 66


state 89
	expr : expr LEQ . expr  (59)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 126
	literals  goto 66


state 90
	expr : expr GT . expr  (60)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 127
	literals  goto 66


state 91
	expr : expr GEQ . expr  (61)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 128
	literals  goto 66


state 92
	expr : expr brackets_args . RBRACKET  (72)
	brackets_args : brackets_args . RBRACKET LBRACKET expr  (74)

	RBRACKET  shift 129
	.  error


state 93
	brackets : brackets RBRACKET LBRACKET .  (28)

	.  reduce 28


state 94
	stmt : LBRACE . stmt_list RBRACE  (46)
	stmt_list : .  (38)

	.  reduce 38

	stmt_list  goto 130


state 95
	constructor : ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE .  (14)

	.  reduce 14


state 96
	stmt : RETURN . SEMI  (44)
	stmt : RETURN . expr SEMI  (45)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	SEMI  shift 131
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 132
	literals  goto 66


state 97
	stmt : IF . LPAREN expr RPAREN stmt  (47)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (48)

	LPAREN  shift 133
	.  error


state 98
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (49)

	LPAREN  shift 134
	.  error


state 99
	stmt : WHILE . LPAREN expr RPAREN stmt  (50)

	LPAREN  shift 135
	.  error


state 100
	vdecl : scope . datatype ID SEMI  (12)
	vdecl : scope . datatype ID ASSIGN expr SEMI  (13)

	CLASS  shift 23
	JBOOLEAN  shift 24
	JCHAR  shift 25
	JINT  shift 26
	JFLOAT  shift 27
	JVOID  shift 28
	JTUPLE  shift 29
	.  error

	datatype  goto 136
	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33


state 101
	stmt : vdecl .  (41)

	.  reduce 41


state 102
	stmt : datatype . ID SEMI  (42)
	stmt : datatype . ID ASSIGN expr SEMI  (43)

	ID  shift 137
	.  error


state 103
	stmt : expr . SEMI  (40)
	expr : expr . PLUS expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . TIMES expr  (54)
	expr : expr . DIVIDE expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . DOT expr  (69)
	expr : expr . brackets_args RBRACKET  (72)

	SEMI  shift 138
	LBRACKET  shift 78
	DOT  shift 79
	PLUS  shift 80
	MINUS  shift 81
	TIMES  shift 82
	DIVIDE  shift 83
	AND  shift 84
	OR  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	.  error

	brackets_args  goto 92


state 104
	stmt_list : stmt_list stmt .  (39)

	.  reduce 39


state 105
	primitive : JTUPLE LPAREN datatype COMMA datatype RPAREN .  (21)

	.  reduce 21


state 106
	fdecl : scope datatype ID LPAREN formals_opt RPAREN LBRACE . stmt_list RBRACE  (15)
	stmt_list : .  (38)

	.  reduce 38

	stmt_list  goto 139


state 107
	expr : LPAREN expr RPAREN .  (66)

	.  reduce 66


state 108
	expr : LPAREN expr COMMA . expr RPAREN  (70)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	.  error

	expr  goto 140
	literals  goto 66


state 109
	expr : NEW ID LPAREN . actuals_opt RPAREN  (68)
	actuals_opt : .  (34)

	TRUE  shift 54
	FALSE  shift 55
	NULL  shift 56
	LPAREN  shift 57
	NOT  shift 58
	NEW  shift 59
	INT_LITERAL  shift 60
	FLOAT_LITERAL  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	ID  shift 64
	RPAREN  reduce 34

	expr  goto 111
	actuals_opt  goto 141
	actuals_list  goto 113
	literals  goto 66


state 110
	expr : NEW type_tag brackets_args . RBRACKET  (71)
	brackets_args : brackets_args . RBRACKET LBRACKET expr  (74)

	RBRACKET  shift 142
	.  error


state 111
	actuals_list : expr .  (36)
	expr : expr . PLUS expr  (52)
	expr : expr . MINUS expr  (53)
	expr : expr . TIMES expr  (54)
	expr : expr . DIVIDE expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . DOT expr  (69)
	expr : expr . brackets_args RBRACKET  (72)

	LBRACKET  shift 78
	DOT  shift 79
	PLUS  shift 80
	MINUS  shift 81
	TIMES  shift 82
	DIVIDE  shift 83
	AND  shift 84
	OR  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	RPAREN  reduce 36
	COMMA  reduce 36

	brackets_args  goto 92


state 112
	expr : ID LPAREN actuals_opt . RPAREN  (67)

	RPAREN  shift 143
	.  error


state 113
	actuals_opt : actuals_list .  (35)
	actuals_list : actuals_list . COMMA expr  (37)

	COMMA  shift 144
	RPAREN  reduce 35

